Allow launching from a module. Correct Class.getSimpleBinaryName0. "java/" packages can be defined in PlatformClassLoader.